Header off screen issue resolved.

--- a/styles.css
+++ b/styles.css
@@ -25,15 +25,13 @@ body {
 
 .header {
     display: flex;
-    padding: 1vw 10vw 0 10vw;
+    padding: 20px 10vw 10px 10vw;
     align-items: center;
-    box-sizing: border-box;
-    width: 100%;
     
 }
 
 .logo {
-    margin-left: 0;
+    margin-right: auto;
 }
 
 .logo h3 {
@@ -45,18 +43,18 @@ body {
 .navigation {
     display: flex;
     margin-left: auto;
-    flex-shrink: 1;
+    padding: 0 10px;
+    background-color: #F9FAF8;
+    border-radius: 10px;
 }
 
 .navigation a {
-    background-color: #F9FAF8;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 10px 15px;
     display: inline-block;
-    margin: 0 0px 0 80px;
     color: #1F2937;
     font-weight: 700;
     font-size: 24px;
+    padding-left: 10px;
 }
 
 /* Hero */
